Move game-version

--- a/templates/game.html
+++ b/templates/game.html
@@ -25,7 +25,7 @@
 		<div class="game">
 			<img src="/images/{{game.BannerID}}" onerror="this.onerror=null; this.src='/static/no_banner.png';" class="game-banner" width="512" height="128">
 			<img src="/images/{{game.ThumbnailID}}" class="game-icon" width="64" height="64">
-			<p class="game-version">{{game.VersionMajor}}.{{game.VersionMinor}}.{{game.VersionRevision}}</p>
+			<p class="game-version">v{{game.VersionMajor}}.{{game.VersionMinor}}.{{game.VersionRevision}}</p>
 			<p class="game-name">{{game.Name}}</p>
 			<p class="game-description-long">{{game.LongDescription}}</p>
 			<div id="launch-game" class="game-launch">Launch</div>
