--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
 	<div class="pkg">
 		<img id="pkg-icon" src="/static/logo2.png" class="pkg-icon" width="64" height="64">
 		<p id="pkg-version" class="pkg-version">v{{version}}</p>
-		<p id="pkg-name" class="pkg-name">GammaLauncher</p>
-		<p id="pkg-description-short" class="pkg-description-short">GammaLauncher is the best game & app launcher.</p>
+		<p id="pkg-name" class="pkg-name">Gamma Launcher</p>
+		<p id="pkg-description-short" class="pkg-description-short">Gamma Launcher is the best game and app (if you want to) launcher.</p>
 		<img id="pkg-more" src="/static/link.png" class="pkg-more" width="48" height="48">
 	</div>
 
