--- a/templates/locations.html
+++ b/templates/locations.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/static/css/all.css">
-	<link rel="stylesheet" href="/static/css/games.css">
+	<link rel="stylesheet" href="/static/css/locations.css">
 	<link rel="shortcut icon" href="/static/favicon.ico">
-	<title>GL | Games</title>
+	<title>GL | Locations</title>
 	<link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -24,16 +24,15 @@
 		</div>
 	</div>
 
-	<div class="game" id="base-game-template">
-		<img id="game-icon" src="/static/logo2.png" class="game-icon" width="64" height="64">
-		<p id="game-version" class="game-version">v0.0.0</p>
-		<p id="game-name" class="game-name">GammaLauncher</p>
-		<p id="game-description-short" class="game-description-short">GammaLauncher is the best and only launcher.</p>
-		<img id="game-more" src="/static/link.png" class="game-more" width="48" height="48">
+	<div class="location" id="base-location-template">
+		<p id="location-name" class="location-name">GammaLauncher</p>
+		<p id="location-path" class="location-path">GammaLauncher is the best and only launcher.</p>
+		<img id="location-more" src="/static/link.png" class="location-more" width="36" height="36">
+		<img id="location-reveal" src="/static/folder.png" class="location-reveal" width="36" height="36">
 	</div>
 
 	<script src="/static/js/all.js"></script>
-	<script src="/static/js/games.js"></script>
+	<script src="/static/js/locations.js"></script>
 
 </body>
 
