--- a/static/css/all.css
+++ b/static/css/all.css
@@ -50,6 +50,42 @@
 	background-color: var(--background-tertiary);
 }
 
+.topbar-locations {
+	background-color: var(--background-secondary);
+	width: 216px;
+	height: 48px;
+	padding: 6px;
+	border-radius: 6px;
+	margin-right: 8px;
+	color: var(--text-primary);
+	font-size: 40px;
+	font-family: 'Cascadia Code', monospace;
+	text-align: center;
+}
+
+.topbar-locations:hover {
+	cursor: pointer;
+	background-color: var(--background-tertiary);
+}
+
+.topbar-images {
+	background-color: var(--background-secondary);
+	width: 148px;
+	height: 48px;
+	padding: 6px;
+	border-radius: 6px;
+	margin-right: 8px;
+	color: var(--text-primary);
+	font-size: 40px;
+	font-family: 'Cascadia Code', monospace;
+	text-align: center;
+}
+
+.topbar-images:hover {
+	cursor: pointer;
+	background-color: var(--background-tertiary);
+}
+
 .topbar-profile {
 	display: flex;
 	align-items: flex-start;
