--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
 	<div class="topbar">
 		<img id="home-button" src="/static/favicon.ico" class="topbar-icon" width="48" height="48">
 		<div id="games-button" class="topbar-games">Games</div>
+		<div id="locations-button" class="topbar-locations">Locations</div>
+		<div id="images-button" class="topbar-images">Images</div>
 		<div class="topbar-profile">
 			<img src="/images/profile_picture" class="topbar-profile-picture" width="48" height="48">
 			<p class="topbar-profile-username">{{username}}</p>
