--- a/templates/game.html
+++ b/templates/game.html
@@ -24,6 +24,8 @@
 			</div>
 		</div>
 
+		<p class="page-title">Viewing: {{game.Name}}</p>
+
 		<div class="game">
 			<img src="/images/{{game.BannerID}}" onerror="this.onerror=null; this.src='/static/no_banner.png';" class="game-banner" width="512" height="128">
 			<img src="/images/{{game.ThumbnailID}}" class="game-icon" width="64" height="64">
