--- a/templates/games.html
+++ b/templates/games.html
@@ -24,6 +24,8 @@
 		</div>
 	</div>
 
+	<p class="page-title">Games</p>
+
 	<div class="game" id="base-game-template">
 		<img id="game-icon" src="/static/logo2.png" class="game-icon" width="64" height="64">
 		<p id="game-version" class="game-version">v0.0.0</p>
