--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,8 @@
 		</div>
 	</div>
 
+	<p class="page-title">Gamma Launcher</p>
+
 	<div class="pkg">
 		<img id="pkg-icon" src="/static/logo2.png" class="pkg-icon" width="64" height="64">
 		<p id="pkg-version" class="pkg-version">v{{version}}</p>
