--- a/templates/locations.html
+++ b/templates/locations.html
@@ -22,6 +22,7 @@
 			<img src="/images/profile_picture" class="topbar-profile-picture" width="48" height="48">
 			<p class="topbar-profile-username">{{username}}</p>
 		</div>
+		<img id="new-button" src="/static/add-secondary.png" class="topbar-add" width="48" height="48">
 	</div>
 
 	<p class="page-title">Locations</p>
